# website_parsing

./: README.md  maxi_config.yml  pyproject.toml  quickstart.py  scrapper.py  scrapper_maxi.py  selenium.py  sheet_connection.py  website.yaml
base_maxi/: main.py
website_parsing/base_maxi/: db_connect.py  google_connection.py  search_file.py
