[tool.poetry]
name = "bluetoothscan"
version = "0.1.0"
description = "Scan the blutooth interior or your house"
authors = ["Fassavard <frederik-andre.savard@gearbox.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wheel = "^0.38.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
